Copy edit, remove error stacks

--- a/website/blog/2020-00-00-2.0.0.md
+++ b/website/blog/2020-00-00-2.0.0.md
@@ -31,30 +31,19 @@ There is a possibility that the default value will change to `always` (meaning e
 
 #### Remove deprecated API ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
 
-- Parser `typescript-eslint` is removed.
-
-  Use `typescript` instead.
-
-- `prettier.util.mapDoc` is removed
-
-  Use `prettier.doc.utils.mapDoc` instead.
-
-- `prettier.util.isNextLineEmpty` is updated
-
+- Parser `typescript-eslint` is removed. Use the `typescript` parser instead.
+- `prettier.util.mapDoc` is removed. Use `prettier.doc.utils.mapDoc` instead.
+- `prettier.util.isNextLineEmpty` is updated.<br>
   Use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
-
-- `prettier.util.isPreviousLineEmpty` is updated
-
+- `prettier.util.isPreviousLineEmpty` is updated.<br>
   Use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
-
-- `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated
-
+- `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated.<br>
   Use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
 
 #### Change default value for `arrowParens` to `always` ([#7430](https://github.com/prettier/prettier/pull/7430) by [@kachkaev](https://github.com/kachkaev))
 
-[Since version 1.9](https://prettier.io/blog/2017/12/05/1.9.0.html#option-to-add-parens-in-arrow-function-arguments-3324httpsgithubcomprettierprettierpull3324-by-rattrayalexhttpsgithubcomrattrayalex-and-suchipihttpsgithubcomsuchipi), Prettier has an [option](https://prettier.io/docs/en/options.html#arrow-function-parentheses) to always wrap arrow function arguments with parentheses.
-Since version 2.0, this behavior becomes default.
+[Since version 1.9](https://prettier.io/blog/2017/12/05/1.9.0.html#option-to-add-parens-in-arrow-function-arguments-3324httpsgithubcomprettierprettierpull3324-by-rattrayalexhttpsgithubcomrattrayalex-and-suchipihttpsgithubcomsuchipi), Prettier has had an [option](https://prettier.io/docs/en/options.html#arrow-function-parentheses) to always wrap arrow function arguments with parentheses.
+In version 2.0, this behavior has become the default.
 
 <!-- prettier-ignore -->
 ```js
@@ -68,8 +57,8 @@ const fn = x => y => x + y;
 const fn = (x) => (y) => x + y;
 ```
 
-At first glance, avoiding parentheses in the isolated example above may look like a better choice because of less visual noise.
-However, when Prettier removes parentheses, it becomes harder to add type annotations, extra arguments or default values as well as making [other changes](https://twitter.com/ManuelBieh/status/1181880524954050560).
+At first glance, avoiding parentheses in the isolated example above may look like a better choice because it results in less visual noise.
+However, when Prettier removes parentheses, it becomes harder to add type annotations, extra arguments, default values, or a variety of [other things](https://twitter.com/ManuelBieh/status/1181880524954050560).
 Consistent use of parentheses provides a better developer experience when editing real codebases, which justifies the change.
 
 You are encouraged to use the new default value, but if the old behavior is still preferred, please configure Prettier with `{ "arrowParens": "avoid" }`.
@@ -79,11 +68,11 @@ You are encouraged to use the new default value, but if the old behavior is stil
 Early versions of Prettier were formatting all files with the \*nix flavor of [line endings](https://en.wikipedia.org/wiki/Newline) (`\n`, also known as `LF`).
 This behavior was changed in [#472](https://github.com/prettier/prettier/pull/472), which allowed preserving Windows line endings (`\r\n`, also known as `CRLF`).
 
-[Since Prettier version 1.15](https://prettier.io/blog/2018/11/07/1.15.0.html#add-an-option-to-enforce-line-endings-5327-by-kachkaev), the flavor of line endings is configurable via the `endOfLine` option.
-The default value was set to `auto` for backwards compatibility, which meant that Prettier preserved a flavor of line endings already present in a given file.
+[Since Prettier version 1.15](https://prettier.io/blog/2018/11/07/1.15.0.html#add-an-option-to-enforce-line-endings-5327-by-kachkaev), the flavor of line endings has been configurable via the `endOfLine` option.
+The default value was set to `auto` for backwards compatibility, which meant that Prettier preserved whichever flavor of line endings was already present in a given file.
 
-With `endOfLine` equal to `auto`, Prettier converted mixed line endings within one file to what was found at the end of the first line.
-However, line endings in neighboring files could still remain inconsistent.
+That meant Prettier converted mixed line endings within one file to what was found at the end of the first line.
+However, line endings in separate files could still remain inconsistent.
 Besides, contributors on different operating systems could accidentally change line endings in previously committed files and this would be fine with Prettier.
 Doing so would produce a large `git diff` and thus make the line-by-line history for a file (`git blame`) harder to explore.
 
@@ -127,7 +116,7 @@ const f = function <T>(value: T) {};
 const g = function* () {};
 ```
 
-#### Method chain breaking heuristic ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
+#### Improved method chain breaking heuristic ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
 
 Previously, any method call chain of length three or longer would be automatically broken into multiple lines. The new heuristic is based on the complexity of the call arguments in the chain, rather than simply on the chain's length. Now, if chained method calls have arguments which aren't easy to understand at a glance (e.g. functions or deeply-nested objects), the chain is broken. Otherwise, they're allowed to remain on one line. See prior issues [#3197](https://github.com/prettier/prettier/issues/3107), [#4765](https://github.com/prettier/prettier/pull/4765), [#1565](https://github.com/prettier/prettier/issues/1565) and [#4125](https://github.com/prettier/prettier/pull/4125) for context and examples.
 
@@ -241,7 +230,7 @@ const averredBathersBoxroomBuggyNurl =
   askTrovenaBeenaDependsRowans === 2 ||
   glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier master (first output)
+// Prettier master (first and second outputs)
 const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   askTrovenaBeenaDependsRowans === 2 ||
@@ -331,7 +320,7 @@ export class Item {
 }
 ```
 
-#### Fix moving semicolon to trailing comment in `return` ([#7140](https://github.com/prettier/prettier/pull/7140) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+#### Correct semicolon placement in empty `return` statement with comment ([#7140](https://github.com/prettier/prettier/pull/7140) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 <!-- prettier-ignore -->
 ```js
@@ -466,7 +455,7 @@ foo ? (
 
 #### Babel as an alternative parser for TypeScript ([#6400](https://github.com/prettier/prettier/pull/6400) by [@JounQin](https://github.com/JounQin) & [@thorn0](https://github.com/thorn0))
 
-A new value for the `parser` option has been added: `babel-ts`, which stands for Babel with its TypeScript support enabled. The `babel-ts` parser supports JavaScript features not yet supported by TypeScript (ECMAScript proposals, e.g. [private methods and accessors](https://github.com/tc39/proposal-private-methods)), but it's less permissive when it comes to error recovery and less battle-tested than the `typescript` parser. While Babel's TypeScript plugin is quite mature, ASTs produced by the two parsers aren't 100% compatible. We tried to take the discrepancies into account, but there still must remain cases where code gets formatted differently or even incorrectly. We call upon the community to help us find such cases. If you see them, please raise issues. In the long run, this will help with [unifying the AST format](https://github.com/typescript-eslint/typescript-eslint/tree/master/packages/typescript-estree#ast-alignment-tests) in future versions of the parsers and thus contribute to a better, more solid JavaScript parser ecosystem.
+A new value for the `parser` option has been added: `babel-ts`, which makes use of Babel’s TypeScript plugin. The `babel-ts` parser supports JavaScript features not yet supported by TypeScript (ECMAScript proposals, e.g. [private methods and accessors](https://github.com/tc39/proposal-private-methods)), but it's less permissive when it comes to error recovery and less battle-tested than the `typescript` parser. While Babel’s TypeScript plugin is quite mature, ASTs produced by the two parsers aren't 100% compatible. We tried to take the discrepancies into account, but there are most likely still cases where code gets formatted differently or even incorrectly. We call upon the you, our users, to help us find such cases. If you see them, please raise issues. In the long run, this will help with [unifying the AST format](https://github.com/typescript-eslint/typescript-eslint/tree/master/packages/typescript-estree#ast-alignment-tests) in future versions of the parsers and thus contribute to a better, more solid JavaScript parser ecosystem.
 
 #### Fix formatting of complex types in arrow function return type annotations ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
@@ -493,7 +482,7 @@ export const getVehicleDescriptor = async (
 > => {};
 ```
 
-#### Print JSDoc-only types as is instead of throwing strange errors ([#7020](https://github.com/prettier/prettier/pull/7020) by [@thorn0](https://github.com/thorn0))
+#### Print JSDoc-only types as is instead of throwing errors ([#7020](https://github.com/prettier/prettier/pull/7020) by [@thorn0](https://github.com/thorn0))
 
 Another fix related to error recovery. Should come in handy to those who migrate from Flow to TypeScript.
 
@@ -504,8 +493,6 @@ function fromFlow(arg: ?Maybe) {}
 
 // Prettier stable
 Error: unknown type: "TSJSDocNullableType"
-    at printPathNoParens (https://prettier.io/lib/standalone.js:26012:13)
-    at Object.genericPrint$3 [as print] (https://prettier.io/lib/standalone.js:23541:28)
 
 // Prettier master
 function fromFlow(arg: ?Maybe) {}
@@ -762,7 +749,9 @@ class Foo {
 <!-- prettier-ignore -->
 ```js
 // Input
-class Foo {#privateProp: number;}
+class Foo {
+  #privateProp: number;
+}
 
 // Prettier stable
 class Foo {
@@ -802,7 +791,7 @@ Label {
 
 #### Don't add extra comma after last comment in map ([#6918](https://github.com/prettier/prettier/pull/6918) by [@fisker](https://github.com/fisker))
 
-Previously, when `trailingComma` set to `es5`, extra comma added after last comment in map.
+Previously, when `trailingComma` set to `es5`, an extra comma was added after last comment in an SCSS map.
 
 <!-- prettier-ignore -->
 ```scss
@@ -948,16 +937,6 @@ e-wrap </textarea
 
 <!-- Prettier stable -->
 TypeError: Cannot read property 'start' of null
-    at hasTrailingLineBreak (https://prettier.io/lib/standalone.js:19694:169)
-    at forceBreakContent (https://prettier.io/lib/standalone.js:19668:154)
-    at Object.genericPrint$2 [as print] (https://prettier.io/lib/standalone.js:21068:126)
-    at callPluginPrintFunction (https://prettier.io/lib/standalone.js:15302:20)
-    at https://prettier.io/lib/standalone.js:15253:18
-    at Object.printComments (https://prettier.io/lib/standalone.js:14974:19)
-    at printGenerically (https://prettier.io/lib/standalone.js:15252:24)
-    at printChild (https://prettier.io/lib/standalone.js:21227:14)
-    at https://prettier.io/lib/standalone.js:21211:104
-    at FastPath.map (https://prettier.io/lib/standalone.js:15155:23)
 
 <!-- Prettier master -->
 <div><span> < </span></div>
@@ -976,22 +955,12 @@ srcset="
 
 <!-- Prettier stable -->
 Error: Mixed descriptor in srcset is not supported
-    at printImgSrcset (https://prettier.io/lib/standalone.js:20867:13)
-    at printEmbeddedAttributeValue (https://prettier.io/lib/standalone.js:21538:26)
-    at Object.embed$2 [as embed] (https://prettier.io/lib/standalone.js:21009:43)
-    at Object.printSubtree (https://prettier.io/lib/standalone.js:15170:30)
-    at callPluginPrintFunction (https://prettier.io/lib/standalone.js:15288:31)
-    at https://prettier.io/lib/standalone.js:15253:18
-    at Object.printComments (https://prettier.io/lib/standalone.js:14974:19)
-    at printGenerically (https://prettier.io/lib/standalone.js:15252:24)
-    at https://prettier.io/lib/standalone.js:21285:175
-    at FastPath.map (https://prettier.io/lib/standalone.js:15155:23)
 
 <!-- Prettier master -->
 <img srcset="/media/examples/surfer-240-200.jpg" />
 ```
 
-#### Fix error throws on unclosed tag in `pre` tag ([#7392](https://github.com/prettier/prettier/pull/7392) by [@fisker](https://github.com/fisker))
+#### Fix error thrown on unclosed tag in `pre` tag ([#7392](https://github.com/prettier/prettier/pull/7392) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```html
@@ -1001,16 +970,6 @@ Error: Mixed descriptor in srcset is not supported
 
 <!-- Prettier stable -->
 TypeError: Cannot read property 'start' of null
-    at printChild (https://prettier.io/lib/standalone.js:21224:358)
-    at https://prettier.io/lib/standalone.js:21211:104
-    at FastPath.map (https://prettier.io/lib/standalone.js:15155:23)
-    at printChildren$1 (https://prettier.io/lib/standalone.js:21155:26)
-    at Object.genericPrint$2 [as print] (https://prettier.io/lib/standalone.js:21039:41)
-    at callPluginPrintFunction (https://prettier.io/lib/standalone.js:15302:20)
-    at https://prettier.io/lib/standalone.js:15253:18
-    at Object.printComments (https://prettier.io/lib/standalone.js:14974:19)
-    at printGenerically (https://prettier.io/lib/standalone.js:15252:24)
-    at printAstToDoc (https://prettier.io/lib/standalone.js:15264:15)
 
 <!-- Prettier master -->
 <pre><br /></pre>
@@ -1519,6 +1478,7 @@ and
 <ul class="abc
        def">
 </ul>
+```
 
 ### GraphQL
 
@@ -1760,7 +1720,7 @@ MDX parsing for JSX failed when encountering JSX elements that where not
 parsable as HTML, such as `<Tag value={{a: 'b'}}>test</Tag>`
 
 <!-- prettier-ignore -->
-````md
+```md
 <!-- Input -->
 
 <Tag  value={ {a :  'b'   } }>test</ Tag>
@@ -1775,14 +1735,8 @@ parsable as HTML, such as `<Tag value={{a: 'b'}}>test</Tag>`
 
 <!-- Prettier stable -->
 
-```
 SyntaxError: Unexpected closing tag "Tag". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (1:35)
 > 1 | <Tag  value={ {a :  'b'   } }>test</ Tag>
-    |                                   ^
-  2 |
-  3 | <Foo bg={ 'red' } >
-  4 |    <div  style={{   display:   'block'}   }>
-```
 
 <!-- Prettier master -->
 
@@ -1796,7 +1750,7 @@ SyntaxError: Unexpected closing tag "Tag". It may happen when the tag has alread
   </div>
 </Foo>
 
-````
+```
 
 ### API
 
