Update changelog source files

--- a/changelog_unreleased/flow/pr-7484.md
+++ b/changelog_unreleased/flow/pr-7484.md
@@ -3,7 +3,9 @@
 <!-- prettier-ignore -->
 ```js
 // Input
-class Foo {#privateProp: number;}
+class Foo {
+  #privateProp: number;
+}
 
 // Prettier stable
 class Foo {
