--- a/changelog_unreleased/javascript/pr-7026.md
+++ b/changelog_unreleased/javascript/pr-7026.md
@@ -18,7 +18,7 @@ const averredBathersBoxroomBuggyNurl =
   askTrovenaBeenaDependsRowans === 2 ||
   glimseGlyphsHazardNoopsTieTie === 3;
 
-// Prettier master (first output)
+// Prettier master (first and second outputs)
 const averredBathersBoxroomBuggyNurl =
   bifornCringerMoshedPerplexSawder === 1 ||
   askTrovenaBeenaDependsRowans === 2 ||
