--- a/changelog_unreleased/api/pr-6993.md
+++ b/changelog_unreleased/api/pr-6993.md
@@ -1,21 +1,10 @@
 #### [BREAKING] Remove deprecated API ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
 
-- Parser `typescript-eslint` is removed.
-
-  Use `typescript` instead.
-
-- `prettier.util.mapDoc` is removed
-
-  Use `prettier.doc.utils.mapDoc` instead.
-
-- `prettier.util.isNextLineEmpty` is updated
-
+- Parser `typescript-eslint` is removed. Use the `typescript` parser instead.
+- `prettier.util.mapDoc` is removed. Use `prettier.doc.utils.mapDoc` instead.
+- `prettier.util.isNextLineEmpty` is updated.<br>
   Use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
-
-- `prettier.util.isPreviousLineEmpty` is updated
-
+- `prettier.util.isPreviousLineEmpty` is updated.<br>
   Use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
-
-- `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated
-
+- `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated.<br>
   Use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
