--- a/changelog_unreleased/api/pr-7435.md
+++ b/changelog_unreleased/api/pr-7435.md
@@ -3,11 +3,11 @@
 Early versions of Prettier were formatting all files with the \*nix flavor of [line endings](https://en.wikipedia.org/wiki/Newline) (`\n`, also known as `LF`).
 This behavior was changed in [#472](https://github.com/prettier/prettier/pull/472), which allowed preserving Windows line endings (`\r\n`, also known as `CRLF`).
 
-[Since Prettier version 1.15](https://prettier.io/blog/2018/11/07/1.15.0.html#add-an-option-to-enforce-line-endings-5327-by-kachkaev), the flavor of line endings is configurable via the `endOfLine` option.
-The default value was set to `auto` for backwards compatibility, which meant that Prettier preserved a flavor of line endings already present in a given file.
+[Since Prettier version 1.15](https://prettier.io/blog/2018/11/07/1.15.0.html#add-an-option-to-enforce-line-endings-5327-by-kachkaev), the flavor of line endings has been configurable via the `endOfLine` option.
+The default value was set to `auto` for backwards compatibility, which meant that Prettier preserved whichever flavor of line endings was already present in a given file.
 
-With `endOfLine` equal to `auto`, Prettier converted mixed line endings within one file to what was found at the end of the first line.
-However, line endings in neighboring files could still remain inconsistent.
+That meant Prettier converted mixed line endings within one file to what was found at the end of the first line.
+However, line endings in separate files could still remain inconsistent.
 Besides, contributors on different operating systems could accidentally change line endings in previously committed files and this would be fine with Prettier.
 Doing so would produce a large `git diff` and thus make the line-by-line history for a file (`git blame`) harder to explore.
 
