--- a/changelog_unreleased/scss/pr-6918.md
+++ b/changelog_unreleased/scss/pr-6918.md
@@ -1,6 +1,6 @@
 #### Don't add extra comma after last comment in map ([#6918](https://github.com/prettier/prettier/pull/6918) by [@fisker](https://github.com/fisker))
 
-Previously, when `trailingComma` set to `es5`, extra comma added after last comment in map.
+Previously, when `trailingComma` set to `es5`, an extra comma was added after last comment in an SCSS map.
 
 <!-- prettier-ignore -->
 ```scss
