--- a/changelog_unreleased/javascript/pr-7367.md
+++ b/changelog_unreleased/javascript/pr-7367.md
@@ -1,4 +1,4 @@
-#### Fix: remove unnecessary parens when yielding JSX ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
+#### Remove unnecessary parens when yielding JSX ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
 ```jsx
