--- a/changelog_unreleased/scss/pr-7211.md
+++ b/changelog_unreleased/scss/pr-7211.md
@@ -1,6 +1,4 @@
-#### Fix scss variable string concatenation removing spaces ([#7211](https://github.com/prettier/prettier/pull/7211) by [@sasurau4](https://github.com/sasurau4))
-
-Previously, when Prettier format the scss variable string concatenation, it would remove spaces. Now, Prettier insert spaces around plus operator.
+#### Fix whitespace in SCSS concatenation ([#7211](https://github.com/prettier/prettier/pull/7211) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```scss
