--- a/changelog_unreleased/vue/pr-7479.md
+++ b/changelog_unreleased/vue/pr-7479.md
@@ -1,29 +1,22 @@
-#### Don't print single `TemplateLiteral` and `StringLiteral` expression on new line ([#7479](https://github.com/prettier/prettier/pull/7479) by [@fisker](https://github.com/fisker))
-
-Previously, we print long `TemplateLiteral` and `StringLiteral` on new line in attribute, now we print them on the same line with attribute name.
+#### Don't print sole string literals in attributes on a new line ([#7479](https://github.com/prettier/prettier/pull/7479) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```vue
 <!-- Input -->
 <template>
-<MyComponent :attr="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`"/>
-</template>
-<template>
-<MyComponent :attr="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'"/>
+<MyComponent
+  :attr1="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`"
+  :attr2="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'"/>
 </template>
 
 <!-- Prettier stable -->
 <template>
   <MyComponent
-    :attr="
-      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`
+    :attr1="
+      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`
     "
-  />
-</template>
-<template>
-  <MyComponent
-    :attr="
-      'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'
+    :attr2="
+      'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'
     "
   />
 </template>
@@ -31,12 +24,8 @@ Previously, we print long `TemplateLiteral` and `StringLiteral` on new line in a
 <!-- Prettier master -->
 <template>
   <MyComponent
-    :attr="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`"
-  />
-</template>
-<template>
-  <MyComponent
-    :attr="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'"
+    :attr1="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`"
+    :attr2="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'"
   />
 </template>
 ```
