--- a/changelog_unreleased/api/pr-5813.md
+++ b/changelog_unreleased/api/pr-5813.md
@@ -1,1 +1,3 @@
 #### [BREAKING] Fix config overrides pattern matching to include dot files ([#5813](https://github.com/prettier/prettier/pull/5813) by [@chrisblossom](https://github.com/chrisblossom))
+
+Previously, [configuration overrides](/docs/en/configuration.html#configuration-overrides) weren't applied to files whose name had a leading dot.
