--- a/changelog_unreleased/cli/pr-7660.md
+++ b/changelog_unreleased/cli/pr-7660.md
@@ -1,4 +1,4 @@
-#### Expand directories, including `.` ([#7660](https://github.com/prettier/prettier/pull/7660) by [@thorn0](https://github.com/thorn0))
+#### [HIGHLIGHT] Expand directories, including `.` ([#7660](https://github.com/prettier/prettier/pull/7660) by [@thorn0](https://github.com/thorn0))
 
 It's finally possible to run `prettier --write .` to format all supported files in the current directory and its subdirectories.
 Directory names can be mixed with file names and glob patterns (e.g. `prettier src "test/*.spec.js" foo.js`).
