--- a/changelog_unreleased/javascript/pr-7138.md
+++ b/changelog_unreleased/javascript/pr-7138.md
@@ -3,7 +3,7 @@
 Because decorators modify the line following, splitting a decorator call’s
 arguments onto multiple lines can obscure the relationship between the
 decorator and its intended target, producing less-readable code. Therefore, the
-function composition logic introduced in #6033 has been changed to exclude
+function composition logic introduced in [#6033](https://github.com/prettier/prettier/pull/6033) has been changed to exclude
 decorator calls.
 
 <!-- prettier-ignore -->
