--- a/changelog_unreleased/markdown/pr-7203.md
+++ b/changelog_unreleased/markdown/pr-7203.md
@@ -1,4 +1,4 @@
-#### Fix incorrect prettification of multi-line markdown footnote ([#7203](https://github.com/prettier/prettier/pull/7203) by [@sasurau4](https://github.com/sasurau4))
+#### Fix formatting of multi-line footnote ([#7203](https://github.com/prettier/prettier/pull/7203) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```md
