--- a/changelog_unreleased/typescript/pr-7144.md
+++ b/changelog_unreleased/typescript/pr-7144.md
@@ -1,4 +1,4 @@
-#### Fix formatting comments for function-like nodes ([#7144](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
+#### Fix formatting of comments for function-like nodes ([#7144](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
 
 <!-- prettier-ignore -->
 ```ts
@@ -54,6 +54,7 @@ let foo9: new (/* bar */) => /* foo */ /* baz */ string;
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 ```
 
+<!-- prettier-ignore -->
 ```ts
 // Input
 abstract class Test {
