--- a/website/blog/2020-03-21-2.0.0.md
+++ b/website/blog/2020-03-21-2.0.0.md
@@ -1,18 +1,99 @@
 ---
-author: "🚧"
-authorURL: "https://github.com/🚧"
-title: "Prettier 2.0: 🚧"
+author: "Georgii Dolzhykov (@thorn0)"
+authorURL: "https://github.com/thorn0"
+title: "Prettier 2.0 “2020”"
 ---
 
-🚧 Write an introduction here.
+Better defaults, a better CLI and better heuristics. Oh, and TypeScript 3.8.
 
 <!--truncate-->
+
+## Highlights
+
+### JavaScript
+
+#### Improved method chain breaking heuristic ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
+
+Previously, any method call chain of length three or longer would be automatically broken into multiple lines. The new heuristic is based on the complexity of the call arguments in the chain, rather than simply on the chain's length. Now, if chained method calls have arguments which aren't easy to understand at a glance (e.g. functions or deeply-nested objects), the chain is broken. Otherwise, they're allowed to remain on one line. See prior issues [#3197](https://github.com/prettier/prettier/issues/3107), [#4765](https://github.com/prettier/prettier/pull/4765), [#1565](https://github.com/prettier/prettier/issues/1565) and [#4125](https://github.com/prettier/prettier/pull/4125) for context and examples.
+
+<!-- prettier-ignore -->
+```javascript
+// Output (Prettier stable)
+if (
+  foo
+    .one()
+    .two()
+    .three() ===
+  bar
+    .four()
+    .five()
+    .six()
+) {
+  // ...
+}
+
+// Output (Prettier master)
+if (foo.one().two().three() === bar.four().five().six()) {
+  // ...
+}
+```
+
+#### Ultimate fix for Closure-style type casts ([#7791](https://github.com/prettier/prettier/pull/7791) by [@thorn0](https://github.com/thorn0), [#7011](https://github.com/prettier/prettier/pull/7011) by [@evilebottnawi](https://github.com/evilebottnawi))
+
+Prettier has been trying not to corrupt these JSDoc type assertions since [v1.6.0](https://prettier.io/blog/2017/08/29/1.6.0.html#handle-closure-compiler-type-cast-syntax-correctly-2484httpsgithubcomprettierprettierpull2484-by-yangsuhttpsgithubcomyangsu), with mixed results. As type checking based on JSDoc becomes increasingly common, we've been getting new bug reports about this syntax. The bugs were tricky because the required parentheses around the expression weren't part of the AST, so Prettier didn't have a good way to detect their presence.
+
+Finally, we used the `createParenthesizedExpressions` option of the Babel parser to represent parentheses in the AST using non-standard nodes. This helped fix all the reported bugs.
+
+Consequently, Prettier won't recognize JSDoc type casts if the `flow` or `typescript` parser is used, but this is reasonable as this syntax makes little sense in Flow and TypeScript files.
+
+<!-- prettier-ignore -->
+```jsx
+// Input
+const nestedAssertions = /** @type {MyType} */
+  (/** @type {unknown} */
+      (x));
+
+// Prettier stable
+const nestedAssertions /** @type {MyType} */ /** @type {unknown} */ = x;
+
+// Prettier master
+const nestedAssertions = /** @type {MyType} */ (/** @type {unknown} */ (x));
+```
+
+Reference documentation for this syntax: [Closure Compiler](https://github.com/google/closure-compiler/wiki/Annotating-JavaScript-for-the-Closure-Compiler#type-type), [TypeScript (with `--checkJs`)](https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html#casts).
+
+### TypeScript
+
+#### TypeScript 3.8 ([#7631](https://github.com/prettier/prettier/pull/7631) by [@thorn0](https://github.com/thorn0), [#7764](https://github.com/prettier/prettier/pull/7764) by [@sosukesuzuki](https://github.com/sosukesuzuki), [#7804](https://github.com/prettier/prettier/pull/7804) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+
+Prettier now supports the new syntax added in TypeScript 3.8:
+
+- [Type-Only Imports and Exports](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#type-only-imports-exports)
+- [ECMAScript Private Fields](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#ecmascript-private-fields)
+- [`export * as ns`](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#export-star-as-namespace-syntax)
+
+### CLI
+
+#### Test whether passed globs are names of existing files before treating them as globs ([#7587](https://github.com/prettier/prettier/pull/7587) by [@fisker](https://github.com/fisker))
+
+Since file names in Linux can contain almost any characters, strings like `foo*.js` and `[bar].css` are valid file names. Previously, if the user needed to format a file named `[bar].css`, a glob escaping syntax had to be used: `prettier "\[bar].css"` (this one doesn't work on Windows, where backslashes are treated as path separators) or `prettier "[[]bar].css"`. Because of this, important use cases were broken. E.g. [lint-staged](https://github.com/okonet/lint-staged) passes absolute paths and knows nothing about the escaping syntax. Now, when Prettier CLI gets a glob, it first tries to resolve it as a literal file name.
+
+#### Expand directories, including `.` ([#7660](https://github.com/prettier/prettier/pull/7660) by [@thorn0](https://github.com/thorn0))
+
+It's finally possible to run `prettier --write .` to format all supported files in the current directory and its subdirectories.
+Directory names can be mixed with file names and glob patterns (e.g. `prettier src "test/*.spec.js" foo.js`).
+
+Also, the order in which files are processed has changed. Previously, all the files were sorted alphabetically before
+formatting. Now, their order corresponds to the order of the specified paths. For each path, the list of resolved
+files is sorted, but the full sorting of the resulting combined list isn't done anymore.
 
 ## Breaking changes
 
 ### API
 
 #### Fix config overrides pattern matching to include dot files ([#5813](https://github.com/prettier/prettier/pull/5813) by [@chrisblossom](https://github.com/chrisblossom))
+
+Previously, [configuration overrides](/docs/en/configuration.html#configuration-overrides) weren't applied to files whose name had a leading dot.
 
 #### Drop support for Node versions older than 10 ([#6908](https://github.com/prettier/prettier/pull/6908) by [@fisker](https://github.com/fisker))
 
@@ -29,14 +110,14 @@ Finally, the default value becomes `es5` instead of `none` in Prettier v2.0.
 If the old behavior is still preferred, please configure Prettier with `{ "trailingComma": "none" }`.
 There is a possibility that the default value will change to `always` (meaning even more trailing commas) in a future major version of Prettier as the JavaScript ecosystem further matures.
 
-#### Remove deprecated API ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
+#### Remove deprecated API and change util signatures ([#6993](https://github.com/prettier/prettier/pull/6993) by [@fisker](https://github.com/fisker))
 
 - Parser `typescript-eslint` is removed. Use the `typescript` parser instead.
 - `prettier.util.mapDoc` is removed. Use `prettier.doc.utils.mapDoc` instead.
 - `prettier.util.isNextLineEmpty` is updated.<br>
   Use `isNextLineEmpty(text, node, locEnd)` instead of `isNextLineEmpty(text, node, options)`.
 - `prettier.util.isPreviousLineEmpty` is updated.<br>
-  Use `isPreviousLineEmpty(text, node, locStart)` instead of `isNextLineEmpty(text, node, options)`.
+  Use `isPreviousLineEmpty(text, node, locStart)` instead of `isPreviousLineEmpty(text, node, options)`.
 - `prettier.util.getNextNonSpaceNonCommentCharacterIndex` is updated.<br>
   Use `getNextNonSpaceNonCommentCharacterIndex(text, node, locEnd)` instead of `getNextNonSpaceNonCommentCharacterIndex(text, node, options)`.
 
@@ -81,9 +162,22 @@ It may be also worth [checking the option docs](https://prettier.io/docs/en/opti
 This will help you avoid a mix of line endings in the repo and a broken `git blame`.
 If the old behavior is still preferred, please configure Prettier with `{ "endOfLine": "auto" }`.
 
-#### Remove the `version` parameter of `prettier.getSupportInfo()` ([#7620](https://github.com/prettier/prettier/pull/7620) by [@thorn0](https://github.com/thorn0))
+#### Cache plugin search results ([#7485](https://github.com/prettier/prettier/pull/7485) by [@fisker](https://github.com/fisker))
 
-In Prettier 1.x (since 1.8.0), it was possible to pass a version number to `prettier.getSupportInfo()` to get information on the languages, options, etc. supported by previous versions. This interesting but apparently not very useful API kept causing maintenance problems and has been removed in Prettier 2.0.0.
+Previously, Prettier searched the file system for plugins on every `prettier.format` call. Now, search results are cached. The cache can be cleared by calling `prettier.clearConfigCache()`.
+
+#### Remove deprecated options and option values ([#7511](https://github.com/prettier/prettier/pull/7511), [#7533](https://github.com/prettier/prettier/pull/7533), [#7535](https://github.com/prettier/prettier/pull/7535), [#7536](https://github.com/prettier/prettier/pull/7536) by [@fisker](https://github.com/fisker))
+
+- Options:
+  - `useFlowParser` (`--flow-parser` in CLI) has been deprecated [since `v0.0.10`](https://github.com/prettier/prettier/blob/master/CHANGELOG.md#0010).
+- Option values:
+  - `parser`: `babylon` (renamed to `babel` in v1.16.0), `postcss` (renamed to `css` in v1.7.1)
+  - `proseWrap`: `true` (renamed to `always` in v1.9.0), `false` (renamed to `never` in v1.9.0)
+  - `trailingComma`: `true` (renamed to `es5` in v0.19.0), `false` (renamed to `none` in v0.19.0)
+
+#### Remove the `version` parameter of `prettier.getSupportInfo` ([#7620](https://github.com/prettier/prettier/pull/7620) by [@thorn0](https://github.com/thorn0))
+
+Since Prettier 1.8.0, it was possible to pass a version number to `prettier.getSupportInfo` to get information on the languages, options, etc. supported by previous versions. This interesting but apparently not very useful API kept causing maintenance problems and has been removed in Prettier 2.0.0.
 
 ## Other changes
 
@@ -114,32 +208,6 @@ function identity(value) {
 }
 const f = function <T>(value: T) {};
 const g = function* () {};
-```
-
-#### Improved method chain breaking heuristic ([#6685](https://github.com/prettier/prettier/pull/6685) by [@mmkal](https://github.com/mmkal))
-
-Previously, any method call chain of length three or longer would be automatically broken into multiple lines. The new heuristic is based on the complexity of the call arguments in the chain, rather than simply on the chain's length. Now, if chained method calls have arguments which aren't easy to understand at a glance (e.g. functions or deeply-nested objects), the chain is broken. Otherwise, they're allowed to remain on one line. See prior issues [#3197](https://github.com/prettier/prettier/issues/3107), [#4765](https://github.com/prettier/prettier/pull/4765), [#1565](https://github.com/prettier/prettier/issues/1565) and [#4125](https://github.com/prettier/prettier/pull/4125) for context and examples.
-
-<!-- prettier-ignore -->
-```javascript
-// Output (Prettier stable)
-if (
-  foo
-    .one()
-    .two()
-    .three() ===
-  bar
-    .four()
-    .five()
-    .six()
-) {
-  // ...
-}
-
-// Output (Prettier master)
-if (foo.one().two().three() === bar.four().five().six()) {
-  // ...
-}
 ```
 
 #### Fix unstable formatting of labeled statements with comments ([#6984](https://github.com/prettier/prettier/pull/6984) by [@clement26695](https://github.com/clement26695))
@@ -191,23 +259,6 @@ bar)}`;
 `111111111 222222222 333333333 444444444 555555555 666666666 777777777 ${
   (foo, bar)
 }`;
-```
-
-#### Preserve parentheses for JSDoc type casting with extra trailing spaces and asterisks ([#7011](https://github.com/prettier/prettier/pull/7011) by [@evilebottnawi](https://github.com/evilebottnawi))
-
-<!-- prettier-ignore -->
-```javascript
-// Input
-const foo = /** @type {!Foo} **/ (baz);
-const bar = /** @type {!Foo}  * * */(baz);
-
-// Prettier stable
-const foo = /** @type {!Foo} **/ baz;
-const bar = /** @type {!Foo}  * * */ baz;
-
-// Prettier master
-const foo = /** @type {!Foo} **/ (baz);
-const bar = /** @type {!Foo}  * * */ (baz);
 ```
 
 #### Fix unstable formatting of logical expressions ([#7026](https://github.com/prettier/prettier/pull/7026) by [@thorn0](https://github.com/thorn0))
@@ -293,7 +344,7 @@ const foo = (
 Because decorators modify the line following, splitting a decorator call’s
 arguments onto multiple lines can obscure the relationship between the
 decorator and its intended target, producing less-readable code. Therefore, the
-function composition logic introduced in #6033 has been changed to exclude
+function composition logic introduced in [#6033](https://github.com/prettier/prettier/pull/6033) has been changed to exclude
 decorator calls.
 
 <!-- prettier-ignore -->
@@ -359,7 +410,7 @@ html`<div></div>`;
 html` <span>TEXT</span> `;
 ```
 
-#### Fix: remove unnecessary parens when yielding JSX ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
+#### Remove unnecessary parens when yielding JSX ([#7367](https://github.com/prettier/prettier/pull/7367) by [@cola119](https://github.com/cola119))
 
 <!-- prettier-ignore -->
 ```jsx
@@ -451,11 +502,26 @@ foo ? (
 ) : null;
 ```
 
+#### Keep comments position for assignments/variables ([#7709](https://github.com/prettier/prettier/pull/7709) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+
+<!-- prettier-ignore -->
+```jsx
+// Input
+const foo = /* comments */
+  bar;
+
+// Prettier stable
+const foo /* comments */ = bar;
+
+// Prettier master
+const foo = /* comments */ bar;
+```
+
 ### TypeScript
 
 #### Babel as an alternative parser for TypeScript ([#6400](https://github.com/prettier/prettier/pull/6400) by [@JounQin](https://github.com/JounQin) & [@thorn0](https://github.com/thorn0))
 
-A new value for the `parser` option has been added: `babel-ts`, which makes use of Babel’s TypeScript plugin. The `babel-ts` parser supports JavaScript features not yet supported by TypeScript (ECMAScript proposals, e.g. [private methods and accessors](https://github.com/tc39/proposal-private-methods)), but it's less permissive when it comes to error recovery and less battle-tested than the `typescript` parser. While Babel’s TypeScript plugin is quite mature, ASTs produced by the two parsers aren't 100% compatible. We tried to take the discrepancies into account, but there are most likely still cases where code gets formatted differently or even incorrectly. We call upon the you, our users, to help us find such cases. If you see them, please raise issues. In the long run, this will help with [unifying the AST format](https://github.com/typescript-eslint/typescript-eslint/tree/master/packages/typescript-estree#ast-alignment-tests) in future versions of the parsers and thus contribute to a better, more solid JavaScript parser ecosystem.
+A new value for the `parser` option has been added: `babel-ts`, which makes use of Babel’s TypeScript plugin. The `babel-ts` parser supports JavaScript features not yet supported by TypeScript (ECMAScript proposals, e.g. [private methods and accessors](https://github.com/tc39/proposal-private-methods)), but it's less permissive when it comes to error recovery and less battle-tested than the `typescript` parser. While Babel’s TypeScript plugin is quite mature, ASTs produced by the two parsers aren't 100% compatible. We tried to take the discrepancies into account, but there are most likely still cases where code gets formatted differently or even incorrectly. We call upon you, our users, to help us find such cases. If you see them, please raise issues. In the long run, this will help with [unifying the AST format](https://github.com/typescript-eslint/typescript-eslint/tree/master/packages/typescript-estree#ast-alignment-tests) in future versions of the parsers and thus contribute to a better, more solid JavaScript parser ecosystem.
 
 #### Fix formatting of complex types in arrow function return type annotations ([#6901](https://github.com/prettier/prettier/pull/6901) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
@@ -588,7 +654,7 @@ type f1 = (
 ) => number;
 ```
 
-#### Fix formatting comments for function-like nodes ([#7144](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
+#### Fix formatting of comments for function-like nodes ([#7144](https://github.com/prettier/prettier/pull/7144) by [@armano2](https://github.com/armano2))
 
 <!-- prettier-ignore -->
 ```ts
@@ -644,6 +710,7 @@ let foo9: new (/* bar */) => /* foo */ /* baz */ string;
 let foo10: new (/* foo */ a: /* bar */ string) => /* baz */ string;
 ```
 
+<!-- prettier-ignore -->
 ```ts
 // Input
 abstract class Test {
@@ -692,6 +759,20 @@ type B = { [a: stringb: string]: string };
 // Prettier master
 type A = { [key: string] };
 type B = { [a: string, b: string]: string };
+```
+
+#### Fix printing of comments in empty type parameters ([#7729](https://github.com/prettier/prettier/pull/7729) by [@sosukesuzuki](https://github.com/sosukesuzuki))
+
+<!-- prettier-ignore -->
+```ts
+// Input
+const a: T</* comment */> = 1;
+
+// Prettier stable
+Error: Comment "comment" was not printed. Please report this error!
+
+// Prettier master
+const a: T</* comment */> = 1;
 ```
 
 ### Flow
@@ -818,9 +899,7 @@ $my-map: (
 );
 ```
 
-#### Fix scss variable string concatenation removing spaces ([#7211](https://github.com/prettier/prettier/pull/7211) by [@sasurau4](https://github.com/sasurau4))
-
-Previously, when Prettier format the scss variable string concatenation, it would remove spaces. Now, Prettier insert spaces around plus operator.
+#### Fix whitespace in SCSS concatenation ([#7211](https://github.com/prettier/prettier/pull/7211) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```scss
@@ -839,6 +918,15 @@ a {
   background-image: url($test-path + "static/test.jpg");
 }
 ```
+
+### Less
+
+#### Fix multiple long-standing issues by updating `postcss-less` ([#6981](https://github.com/prettier/prettier/pull/6981) by [@fisker](https://github.com/fisker), [#7021](https://github.com/prettier/prettier/pull/7021) by [@evilebottnawi](https://github.com/evilebottnawi), [@thorn0](https://github.com/thorn0))
+
+- [`each`](http://lesscss.org/functions/#list-functions-each) is supported now ([#5653](https://github.com/prettier/prettier/issues/5653)).
+- `!important` was being moved out of mixin call parameters ([#3544](https://github.com/prettier/prettier/issues/3544)).
+- Comments in rulesets passed to mixin calls caused duplicate semicolons ([#3096](https://github.com/prettier/prettier/issues/3096)).
+- `::before` was broken in mixin call parameters ([#5791](https://github.com/prettier/prettier/issues/5791)).
 
 ### HTML
 
@@ -1111,7 +1199,7 @@ Previously, it worked only for tags. Useful for protecting various macros and pr
 
 <!-- prettier-ignore -->
 ```html
-<!-- Input --> 
+<!-- Input -->
 <!-- prettier-ignore -->
 A super long string that has been marked as ignore because it was probably generated by some script.
 
@@ -1195,32 +1283,25 @@ export default {
 </script>
 ```
 
-#### Don't print single `TemplateLiteral` and `StringLiteral` expression on new line ([#7479](https://github.com/prettier/prettier/pull/7479) by [@fisker](https://github.com/fisker))
-
-Previously, we print long `TemplateLiteral` and `StringLiteral` on new line in attribute, now we print them on the same line with attribute name.
+#### Don't print sole string literals in attributes on a new line ([#7479](https://github.com/prettier/prettier/pull/7479) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```vue
 <!-- Input -->
 <template>
-<MyComponent :attr="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`"/>
-</template>
-<template>
-<MyComponent :attr="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'"/>
+<MyComponent
+  :attr1="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`"
+  :attr2="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'"/>
 </template>
 
 <!-- Prettier stable -->
 <template>
   <MyComponent
-    :attr="
-      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`
+    :attr1="
+      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`
     "
-  />
-</template>
-<template>
-  <MyComponent
-    :attr="
-      'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'
+    :attr2="
+      'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'
     "
   />
 </template>
@@ -1228,14 +1309,62 @@ Previously, we print long `TemplateLiteral` and `StringLiteral` on new line in a
 <!-- Prettier master -->
 <template>
   <MyComponent
-    :attr="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog ${template} literal value`"
+    :attr1="`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong ${template} literal value`"
+    :attr2="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooong string literal value'"
   />
 </template>
+```
+
+#### Fix indentation of Vue expressions ([#7781](https://github.com/prettier/prettier/pull/7781) by [@fisker](https://github.com/fisker))
+
+<!-- prettier-ignore -->
+```vue
+<!-- Input -->
+<template>
+<MyComponent v-if="
+long_long_long_long_long_long_long_condition_1 && long_long_long_long_long_long_long_condition_2 &&
+long_long_long_long_long_long_long_condition_3 &&
+long_long_long_long_long_long_long_condition_4
+"
+:attr="
+`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 1` +
+`loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 2`
+"
+/>
+</template>
+
+<!-- Prettier stable -->
 <template>
   <MyComponent
-    :attr="'loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string literal value'"
+    v-if="
+      long_long_long_long_long_long_long_condition_1 &&
+        long_long_long_long_long_long_long_condition_2 &&
+        long_long_long_long_long_long_long_condition_3 &&
+        long_long_long_long_long_long_long_condition_4
+    "
+    :attr="
+      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 1` +
+        `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 2`
+    "
   />
 </template>
+
+<!-- Prettier master -->
+<template>
+  <MyComponent
+    v-if="
+      long_long_long_long_long_long_long_condition_1 &&
+      long_long_long_long_long_long_long_condition_2 &&
+      long_long_long_long_long_long_long_condition_3 &&
+      long_long_long_long_long_long_long_condition_4
+    "
+    :attr="
+      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 1` +
+      `loooooooooooooooooooooooooooooooooooooooooooooooooooooooooooog string 2`
+    "
+  />
+</template>
+
 ```
 
 ### Angular
@@ -1256,7 +1385,7 @@ While there are some syntax incompatibilities (one-time bindings and the precede
 <div ng-if="$ctrl.shouldShowWarning && !$ctrl.loading">Warning!</div>
 ```
 
-#### Fix formatting i18n attributes ([#7371](https://github.com/prettier/prettier/pull/7371) by [@thorn0](https://github.com/thorn0))
+#### Fix formatting of i18n attributes ([#7371](https://github.com/prettier/prettier/pull/7371) by [@thorn0](https://github.com/thorn0))
 
 Prettier 1.19 [added](https://prettier.io/blog/2019/11/09/1.19.0.html#add-formatting-for-i18n-attributes-6695-by-voithos)
 support for formatting [i18n attributes](https://angular.io/guide/i18n), but putting the closing quote mark on a new line
@@ -1286,7 +1415,7 @@ prop="My Text"></div>
 ></div>
 ```
 
-### Handlebars
+### Handlebars (alpha)
 
 #### Fix superfluous line breaks in `ConcatStatement` ([#7051](https://github.com/prettier/prettier/pull/7051) by [@dcyriller](https://github.com/dcyriller))
 
@@ -1480,6 +1609,32 @@ and
 </ul>
 ```
 
+#### Preserve whitespace control characters ([#7575](https://github.com/prettier/prettier/pull/7575) by [@mahirshah](https://github.com/mahirshah))
+
+<!-- prettier-ignore -->
+```hbs
+{{!-- input --}}
+{{~#if bar}}
+  if1
+{{~else~}}
+  else
+{{~/if~}}
+
+{{!-- stable --}}
+{{#if bar}}
+  if1
+{{else}}
+  else
+{{/if}}
+
+{{!-- master --}}
+{{~#if bar}}
+  if1
+{{~else~}}
+  else
+{{~/if~}}
+```
+
 ### GraphQL
 
 #### Improve detection of separator between interfaces ([#7305](https://github.com/prettier/prettier/pull/7305) by [@fisker](https://github.com/fisker))
@@ -1665,7 +1820,7 @@ Previously, when Prettier formatted an HTML tag placed just after a list item, i
   <blockquote>asdf</blockquote>
 ```
 
-#### Fix incorrect prettification of multi-line markdown footnote ([#7203](https://github.com/prettier/prettier/pull/7203) by [@sasurau4](https://github.com/sasurau4))
+#### Fix formatting of multi-line footnote ([#7203](https://github.com/prettier/prettier/pull/7203) by [@sasurau4](https://github.com/sasurau4))
 
 <!-- prettier-ignore -->
 ```md
@@ -1752,17 +1907,6 @@ SyntaxError: Unexpected closing tag "Tag". It may happen when the tag has alread
 
 ```
 
-### API
-
-#### Remove deprecated options and option values ([#7511](https://github.com/prettier/prettier/pull/7511), [#7533](https://github.com/prettier/prettier/pull/7533), [#7535](https://github.com/prettier/prettier/pull/7535), [#7536](https://github.com/prettier/prettier/pull/7536) by [@fisker](https://github.com/fisker))
-
-- Options:
-  - `useFlowParser` (`--flow-parser` in CLI) [has been deprecated since `v0.0.10`](https://github.com/prettier/prettier/blob/master/CHANGELOG.md#0010).
-- Renamed option values whose old names were kept for backward compatibility:
-  - `parser`: `babylon` (renamed to `babel` in _v1.16.0_), `postcss` (renamed to `css` in _v1.7.1_)
-  - `trailingComma`: `true` (renamed to `always` in _v1.9.0_), `false` (renamed to `never` in _v1.9.0_)
-  - `proseWrap`: `true` (renamed to `es5` in _v0.19.0_), `false` (renamed to `none` in _v0.19.0_)
-
 ### CLI
 
 #### Support file extensions `.cjs` and `.yaml.sed` ([#7210](https://github.com/prettier/prettier/pull/7210) by [@sosukesuzuki](https://github.com/sosukesuzuki))
@@ -1777,10 +1921,6 @@ $ prettier test.cjs
 "use strict";
 console.log("Hello, World!");
 ```
-
-#### Test whether passed globs are names of existing files before treating them as globs ([#7587](https://github.com/prettier/prettier/pull/7587) by [@fisker](https://github.com/fisker))
-
-Since file names in Linux can contain almost any characters, strings like `foo*.js` and `[bar].css` are valid file names. Previously, if the user needed to format a file named `[bar].css`, a glob escaping syntax had to be used: `prettier "\[bar].css"` (this one doesn't work on Windows, where backslashes are treated as path separators) or `prettier "[[]bar].css"`. Because of this, important use cases were broken. E.g. [lint-staged](https://github.com/okonet/lint-staged) passes absolute paths and knows nothing about the escaping syntax. Now, when Prettier CLI gets a glob, it first tries to resolve it as a literal file name.
 
 #### Respect `--ignore-path` when prettier executes from a subdirectory ([#7588](https://github.com/prettier/prettier/pull/7588) by [@heylookltsme](https://github.com/heylookltsme))
 
