edit changelog entry

--- a/changelog_unreleased/typescript/pr-7631.md
+++ b/changelog_unreleased/typescript/pr-7631.md
@@ -1,9 +1,7 @@
-#### TypeScript 3.8 ([#7631](https://github.com/prettier/prettier/pull/7631) by [@thorn0](https://github.com/thorn0))
+#### TypeScript 3.8 ([#7631](https://github.com/prettier/prettier/pull/7631) by [@thorn0](https://github.com/thorn0), [#7764](https://github.com/prettier/prettier/pull/7764) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
-Prettier doesn't yet fully support the new syntax added in TypeScript 3.8:
+Prettier now supports the new syntax added in TypeScript 3.8:
 
-| Syntax                                                                                                                          | `typescript` parser | `babel-ts` parser |
-| ------------------------------------------------------------------------------------------------------------------------------- | ------------------- | ----------------- |
-| [Type-Only Imports and Exports](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#type-only-imports-exports) | ✔️                  | ❌                |
-| [ECMAScript Private Fields](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#ecmascript-private-fields)     | ✔️                  | ✔️                |
-| [`export * as ns`](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#export-star-as-namespace-syntax)        | ❌                  | ❌                |
+- [Type-Only Imports and Exports](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#type-only-imports-exports) (not supported by the `babel-ts` parser yet)
+- [ECMAScript Private Fields](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#ecmascript-private-fields)
+- [`export * as ns`](https://devblogs.microsoft.com/typescript/announcing-typescript-3-8/#export-star-as-namespace-syntax)
