--- a/changelog_unreleased/vue/pr-7781.md
+++ b/changelog_unreleased/vue/pr-7781.md
@@ -1,4 +1,4 @@
-#### Correct vue attributes indention ([#7781](https://github.com/prettier/prettier/pull/7781) by [@fisker](https://github.com/fisker))
+#### Fix vue attributes indention ([#7781](https://github.com/prettier/prettier/pull/7781) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```vue
